load("@crates_io//:defs.bzl", "crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

rust_proc_macro(
    name = "unfmt",
    srcs = glob(["src/**/*.rs"]),
    deps = crate_deps([
        "bstr",
        "syn",
        "quote",
        "proc-macro2",
    ]),
)
