[package]
name = "unfmt_macros"
version = "0.2.2"
edition = "2021"
description = "A compile-time pattern matching library that reverses the interpolation process of `format!`."
license = "Apache-2.0"
authors = ["Mathematic Inc"]
repository = "https://github.com/mathematic-inc/unfmt"
categories = ["development-tools::procedural-macro-helpers", "parsing"]
keywords = ["unformat", "pattern-matching", "format", "proc-macro", "parsing"]

[lib]
proc-macro = true
path = "./unfmt_macros.rs"

[lints]
workspace = true

[dependencies]
bstr = "1.9.1"
syn = "2.0.60"
quote = "1.0.36"
proc-macro2 = "1.0.81"
